# ai_team_6

./: .gitignore  01_data_loading_validation.py  02_data_cleaning_standardization.py  03_data_integration.py  04_price_visualization.py  05_correlation_heatmap.py  06_political_themes_analysis.py  07_sentiment_analysis.py  08_mergeData_byGroup.py  08_sentiment_price_regression.py  09_macroeconomic_regression.py  09_wordCloudSrc.py  10_open_interest_analysis.py  11_wordcloud_generation.py  12_network_analysis.py  14_generate_report.py  251123-260114-news.ipynb  DEPLOYMENT.md  NOTION_IMAGE_GUIDE.txt  PROJECT_SUMMARY.md  Python.json  README.md  SNS_Community_JUNWOO.ipynb  SNS_DATA_EXPANDED_RESULTS.csv  TASK_DETAILS_FOR_NOTION.md  Team_Doge.ipynb  USER_GUIDE.md  YOUTUBE_AUTO_MINED_DATA.csv  YOUTUBE_HISTORY_DATA.csv  bitcoin_crash_insights.md  crash_data_collector.py  crash_leading_analysis.py  dashboard_app.py  fetch_btc_fng_20250901_20251031.py  gdelt_collect_stage1-kjw.ipynb  gdelt_collect_stage1.ipynb  gdelt_collect_stage2-kjw.ipynb  gdelt_refine-kjw.ipynb  kjw-analysis-1-correlation.ipynb  kjw-correlation_analysis.ipynb  (+13 more)
.streamlit/: config.toml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
data/: README.md  btc_fear_greed_20250901_20251031.csv
data/Community_data/: 00_COLLECTION_METADATA.json  01_SNS_URL_DATABASE.csv  DAILY_TIME_SERIES_ANALYSIS.csv  FINAL_COMMUNITY_DATASET_145.csv  (+26 more)
jays_work/: test1.ipynb  test1.py
merged_정형데이터/: daily_data_merged.csv  merged_m2_inflation.csv
st.data/: 10 Year Treasury Yield 국채금리 일간 데이터 (250901-251031)_ymd.csv  M2_BTC_ymd.csv  US Dollar Index 일간 데이터 (250901-251031)_ymd.csv  US M2 money supply 통화량 월간 데이터.csv  gold_data_yfinance (250901-251101)_ymd.csv  us_inflation_rate_2025(8-12월)_ymd.csv  국채금리 일간 데이터_clean.csv  금값 일간 데이터 (250901-251031)_ymd.csv  미결제약정(OI) 일간 데이터 (250901-251101)_ymd.csv  비트코인 일간 데이터 (250901-251101)_ymd.csv  통합 데이터 (250901-251101)_ymd.csv
st_data_merged/: st_data_daily_merged.csv  st_data_monthly_merged.csv
(+178 files in other folders)
