[project]
name = "ai-project-01-team6"
version = "0.1.0"
description = "ai-project-01-team6"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "emoji>=2.15.0",
    "folium>=0.20.0",
    "gensim>=4.4.0",
    "google-api-python-client>=2.188.0",
    "jpype1==1.5.2",
    "jupyter>=1.1.1",
    "kiwipiepy>=0.22.2",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "networkx>=3.6.1",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "pillow>=12.1.0",
    "praw>=7.8.1",
    "pyldavis>=3.4.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "statsmodels>=0.14.6",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "vadersentiment>=3.3.2",
    "wordcloud>=1.9.6",
    "yfinance>=1.1.0",
    "youtube-comment-downloader>=0.1.78",
    "youtube-search-python>=1.6.6",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.1.31",
]
